[tool.poetry]
name = "pythonprojectwebdeveloper"
version = "1.0.0"
description = ""
authors = ["Razvan Turcanu"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
plotly = "^5.7.0"
pandas = "^1.4.2"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
